# liblightargparser

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: LightArgParserHelper.h
liblightargparser/: CMakeLists.txt
liblightargparser/include/: LightArgParser.h  LightArgParserHelper.h
liblightargparser/src/: LightArgParser.cpp  LightArgParserHelper.cpp
src/: LightArgParserHelper.cpp
tests/: CMakeLists.txt
tests/component/: CMakeLists.txt  README.md  SimpleAppTest.cpp
tests/unit/: CMakeLists.txt  LightArgParserHelperTest.cpp  LightArgParserTest.cpp  README.md
tools/: apply-cppcheck.sh
